[package]
name = "drod-rpg-solver"
version = "0.1.0"
authors = ["Yusheng Hou <yhou2000@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.0"
rust-dense-bitset = "0.1.1"

[features]
closed-level = []
